--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                         <a href="work_ryu.html"><div class="poster"><img src="./back/img/img01.webp" alt="The Glory" class="br"></div></a>
                     </article>
                     <article class="face2">
-                        <div class="poster"><img src="./back/img/img02.webp" alt="Queen of Tears"></div>
+                        <div class="poster"><img src="./back/img/img02.webp" alt="Queen of Tears" class="br"></div>
                     </article>
                     <article class="face3">
                         <div class="poster"><img src="./back/img/img03.webp" alt="Celebrity"></div>
