비디오, 이미지 2차수정중

--- a/viewersplayground_moon.html
+++ b/viewersplayground_moon.html
@@ -452,7 +452,7 @@
                         <div class="info-overlay">
                           <ul class="subtitle">
                             <li><b>Hotel Del Luna, IU fan art</b></li>
-                            <li>StoryWeaver</li>
+                            <li>sunny</li>
                           </ul>
                           <div class="like">
                             <img class="heart" src="./moon/asset/heart.svg">
@@ -468,7 +468,7 @@
                         <div class="info-overlay">
                           <ul class="subtitle">
                             <li><b>"Bon Appédit, Your Majesty". Lee Chaemin's fan art</b></li>
-                            <li>Cinephile</li>
+                            <li>blue_jay</li>
                           </ul>
                           <div class="like">
                             <img class="heart" src="./moon/asset/heart.svg">
@@ -508,7 +508,7 @@
                         <div class="info-overlay">
                           <ul class="subtitle">
                             <li><b>The Glory, Song Hye-kyo fan art</b></li>
-                            <li>DigitalDreamer</li>
+                            <li>lucky_clover</li>
                           </ul>
                           <div class="like">
                             <img class="heart" src="./moon/asset/heart.svg">
@@ -523,7 +523,7 @@
                         <div class="info-overlay">
                           <ul class="subtitle">
                             <li><b>2Sweet Home Fan Art</b></li>
-                            <li>CanvasCreator</li>
+                            <li>rainy_day</li>
                           </ul>
                           <div class="like">
                             <img class="heart" src="./moon/asset/heart.svg">
@@ -538,7 +538,7 @@
                         <div class="info-overlay">
                           <ul class="subtitle">
                             <li><b>3Sweet Home Fan Art</b></li>
-                            <li>InkMaster</li>
+                            <li>moondust</li>
                           </ul>
                           <div class="like">
                             <img class="heart" src="./moon/asset/heart.svg">
@@ -568,7 +568,7 @@
                         <div class="info-overlay">
                           <ul class="subtitle">
                             <li><b>5Sweet Home Fan Art</b></li>
-                            <li>ArtisticWhiz</li>
+                            <li>cozy_corner</li>
                           </ul>
                           <div class="like">
                             <img class="heart" src="./moon/asset/heart.svg">
@@ -583,7 +583,7 @@
                         <div class="info-overlay">
                           <ul class="subtitle">
                             <li><b>6Sweet Home Fan Art</b></li>
-                            <li>PalettePro</li>
+                            <li>crafty_crab</li>
                           </ul>
                           <div class="like">
                             <img class="heart" src="./moon/asset/heart.svg">
@@ -598,7 +598,7 @@
                         <div class="info-overlay">
                           <ul class="subtitle">
                             <li><b>7Sweet Home Fan Art</b></li>
-                            <li>VisionaryVibes</li>
+                            <li>Vivi</li>
                           </ul>
                           <div class="like">
                             <img class="heart" src="./moon/asset/heart.svg">
@@ -622,49 +622,48 @@
                 <h4>🔥 ‍Popular</h4>
                 <div class="swiper popular_video_slide">
                   <ul class="swiper-wrapper">
-                    <li class="swiper-slide slide1">
+                    <li class="swiper-slide">
                       <div class="fan-video-wrap">
                         <figure class="put_in_later mirror">
-                          <video src="./moon/asset/chef_ai_video.mp4" muted loop autoplay playsinline></video>
+                          <video src="./moon/asset/fan_video_pop_1.mp4" muted loop playsinline controlslist="nodownload"></video>
                         </figure>
                       </div>
                     </li>
-                    <li class="swiper-slide slide2">
+                    <li class="swiper-slide">
                       <div class="fan-video-wrap">
                         <figure class="put_in_later mirror">
-                          <video src="./moon/asset/chef_ai_video.mp4" muted loop autoplay playsinline></video>
+                          <video src="./moon/asset/fan_video_pop_2.mp4" muted loop playsinline controlslist="nodownload"></video>
                         </figure>
                       </div>
                     </li>
-                    <li class="swiper-slide slide3">
+                    <li class="swiper-slide">
                       <div class="fan-video-wrap">
                         <figure class="put_in_later mirror">
-                          <video src="./moon/asset/chef_ai_video.mp4" muted loop autoplay playsinline></video>
+                          <video src="./moon/asset/fan_video_pop_3.mp4" muted loop playsinline controlslist="nodownload"></video>
                         </figure>
                       </div>
                     </li>
-                    <li class="swiper-slide slide4">
+                    <li class="swiper-slide">
+                      <div class="fan-video-wrap">
+                        <figure>
+                          <video src="./moon/asset/fan_video_pop_4.mp4" muted loop playsinline controlslist="nodownload"></video>
+                      </div>
+                    </li>
+                    <li class="swiper-slide">
                       <div class="fan-video-wrap">
                         <figure>
                           <video src="./moon/asset/chef_ai_video.mp4" muted loop></video>
                         </figure>
                       </div>
                     </li>
-                    <li class="swiper-slide slide5">
+                    <li class="swiper-slide">
                       <div class="fan-video-wrap">
                         <figure>
                           <video src="./moon/asset/chef_ai_video.mp4" muted loop></video>
                         </figure>
                       </div>
                     </li>
-                    <li class="swiper-slide slide6">
-                      <div class="fan-video-wrap">
-                        <figure>
-                          <video src="./moon/asset/chef_ai_video.mp4" muted loop></video>
-                        </figure>
-                      </div>
-                    </li>
-                    <li class="swiper-slide slide7">
+                    <li class="swiper-slide">
                       <div class="fan-video-wrap">
                         <figure>
                           <video src="./moon/asset/chef_ai_video.mp4" muted loop></video>
@@ -680,49 +679,63 @@
                 <h4>✨ New</h4>
                 <div class="swiper new_video_slide">
                   <ul class="swiper-wrapper">
-                    <li class="swiper-slide slide1">
+                    <li class="swiper-slide">
                       <div class="fan-video-wrap">
                         <figure>
                           <video src="./moon/asset/chef_ai_video.mp4" muted loop></video>
                         </figure>
                       </div>
                     </li>
-                    <li class="swiper-slide slide2">
+                    <li class="swiper-slide">
                       <div class="fan-video-wrap">
                         <figure>
                           <video src="./moon/asset/chef_ai_video.mp4" muted loop></video>
                         </figure>
                       </div>
                     </li>
-                    <li class="swiper-slide slide3">
+                    <li class="swiper-slide">
                       <div class="fan-video-wrap">
                         <figure>
                           <video src="./moon/asset/chef_ai_video.mp4" muted loop></video>
                         </figure>
                       </div>
                     </li>
-                    <li class="swiper-slide slide4">
+                    <li class="swiper-slide">
                       <div class="fan-video-wrap">
                         <figure>
                           <video src="./moon/asset/chef_ai_video.mp4" muted loop></video>
                         </figure>
                       </div>
                     </li>
-                    <li class="swiper-slide slide5">
+                    <li class="swiper-slide">
                       <div class="fan-video-wrap">
                         <figure>
                           <video src="./moon/asset/chef_ai_video.mp4" muted loop></video>
                         </figure>
                       </div>
                     </li>
-                    <li class="swiper-slide slide6">
+                    <li class="swiper-slide">
                       <div class="fan-video-wrap">
                         <figure>
                           <video src="./moon/asset/chef_ai_video.mp4" muted loop></video>
                         </figure>
                       </div>
                     </li>
-                    <li class="swiper-slide slide7">
+                    <li class="swiper-slide">
+                      <div class="fan-video-wrap">
+                        <figure>
+                          <video src="./moon/asset/chef_ai_video.mp4" muted loop></video>
+                        </figure>
+                      </div>
+                    </li>
+                    <li class="swiper-slide">
+                      <div class="fan-video-wrap">
+                        <figure>
+                          <video src="./moon/asset/chef_ai_video.mp4" muted loop></video>
+                        </figure>
+                      </div>
+                    </li>
+                    <li class="swiper-slide">
                       <div class="fan-video-wrap">
                         <figure>
                           <video src="./moon/asset/chef_ai_video.mp4" muted loop></video>
