--- a/viewersplayground_moon.html
+++ b/viewersplayground_moon.html
@@ -618,49 +618,49 @@
                     <li class="swiper-slide slide1">
                       <div class="fan-video-wrap">
                         <figure class="put_in_later mirror">
-                          <video src="./moon/asset/chef_ai_video.mp4" muted loop autoplay playsinline></video>
+                          <video src="moon/asset/chef_ai_video.mp4" muted loop autoplay playsinline></video>
                         </figure>
                       </div>
                     </li>
                     <li class="swiper-slide slide2">
                       <div class="fan-video-wrap">
                         <figure class="put_in_later mirror">
-                          <video src="./moon/asset/chef_ai_video.mp4" muted loop autoplay playsinline></video>
+                          <video src="moon/asset/chef_ai_video.mp4" muted loop autoplay playsinline></video>
                         </figure>
                       </div>
                     </li>
                     <li class="swiper-slide slide3">
                       <div class="fan-video-wrap">
                         <figure class="put_in_later mirror">
-                          <video src="./moon/asset/chef_ai_video.mp4" muted loop autoplay playsinline></video>
+                          <video src="moon/asset/chef_ai_video.mp4" muted loop autoplay playsinline></video>
                         </figure>
                       </div>
                     </li>
                     <li class="swiper-slide slide4">
                       <div class="fan-video-wrap">
                         <figure>
-                          <video src="./moon/asset/chef_ai_video.mp4" muted loop></video>
+                          <video src="moon/asset/chef_ai_video.mp4" muted loop></video>
                         </figure>
                       </div>
                     </li>
                     <li class="swiper-slide slide5">
                       <div class="fan-video-wrap">
                         <figure>
-                          <video src="./moon/asset/chef_ai_video.mp4" muted loop></video>
+                          <video src="moon/asset/chef_ai_video.mp4" muted loop></video>
                         </figure>
                       </div>
                     </li>
                     <li class="swiper-slide slide6">
                       <div class="fan-video-wrap">
                         <figure>
-                          <video src="./moon/asset/chef_ai_video.mp4" muted loop></video>
+                          <video src="moon/asset/chef_ai_video.mp4" muted loop></video>
                         </figure>
                       </div>
                     </li>
                     <li class="swiper-slide slide7">
                       <div class="fan-video-wrap">
                         <figure>
-                          <video src="./moon/asset/chef_ai_video.mp4" muted loop></video>
+                          <video src="moon/asset/chef_ai_video.mp4" muted loop></video>
                         </figure>
                       </div>
                     </li>
@@ -676,49 +676,49 @@
                     <li class="swiper-slide slide1">
                       <div class="fan-video-wrap">
                         <figure>
-                          <video src="./moon/asset/chef_ai_video.mp4" muted loop></video>
+                          <video src="moon/asset/chef_ai_video.mp4" muted loop></video>
                         </figure>
                       </div>
                     </li>
                     <li class="swiper-slide slide2">
                       <div class="fan-video-wrap">
                         <figure>
-                          <video src="./moon/asset/chef_ai_video.mp4" muted loop></video>
+                          <video src="moon/asset/chef_ai_video.mp4" muted loop></video>
                         </figure>
                       </div>
                     </li>
                     <li class="swiper-slide slide3">
                       <div class="fan-video-wrap">
                         <figure>
-                          <video src="./moon/asset/chef_ai_video.mp4" muted loop></video>
+                          <video src="moon/asset/chef_ai_video.mp4" muted loop></video>
                         </figure>
                       </div>
                     </li>
                     <li class="swiper-slide slide4">
                       <div class="fan-video-wrap">
                         <figure>
-                          <video src="./moon/asset/chef_ai_video.mp4" muted loop></video>
+                          <video src="moon/asset/chef_ai_video.mp4" muted loop></video>
                         </figure>
                       </div>
                     </li>
                     <li class="swiper-slide slide5">
                       <div class="fan-video-wrap">
                         <figure>
-                          <video src="./moon/asset/chef_ai_video.mp4" muted loop></video>
+                          <video src="moon/asset/chef_ai_video.mp4" muted loop></video>
                         </figure>
                       </div>
                     </li>
                     <li class="swiper-slide slide6">
                       <div class="fan-video-wrap">
                         <figure>
-                          <video src="./moon/asset/chef_ai_video.mp4" muted loop></video>
+                          <video src="moon/asset/chef_ai_video.mp4" muted loop></video>
                         </figure>
                       </div>
                     </li>
                     <li class="swiper-slide slide7">
                       <div class="fan-video-wrap">
                         <figure>
-                          <video src="./moon/asset/chef_ai_video.mp4" muted loop></video>
+                          <video src="moon/asset/chef_ai_video.mp4" muted loop></video>
                         </figure>
                       </div>
                     </li>
@@ -1058,7 +1058,7 @@
                 <!-- Front of the card -->
                 <div class="vote-card-front">
                   <div class="img-area">
-                    <img src="./moon/asset/vote_yeonjin.jpg" alt="Park Yeon-jin from The Glory">
+                    <img src="moon/asset/vote_yeonjin.jpg" alt="Park Yeon-jin from The Glory">
                   </div>
                   <div class="info-area">
                     <span class="drama-title">The Glory</span>
@@ -1069,7 +1069,7 @@
                 <!-- Back of the card -->
                 <div class="vote-card-back">
                   <div class="img-area">
-                    <img src="./moon/asset/vote_yeonjin.jpg" alt="Park Yeon-jin from The Glory">
+                    <img src="moon/asset/vote_yeonjin.jpg" alt="Park Yeon-jin from The Glory">
                   </div>
                   <div class="info-area result-area">
                     <span class="drama-title">The Glory</span>
@@ -1088,7 +1088,7 @@
                 <!-- Front of the card -->
                 <div class="vote-card-front">
                   <div class="img-area">
-                    <img src="./moon/asset/vote_yooneunseong.jpg" alt="Yoon Eun-seong from Queen of Tears">
+                    <img src="moon/asset/vote_yooneunseong.jpg" alt="Yoon Eun-seong from Queen of Tears">
                   </div>
                   <div class="info-area">
                     <span class="drama-title">Queen of Tears</span>
@@ -1099,7 +1099,7 @@
                 <!-- Back of the card -->
                 <div class="vote-card-back">
                   <div class="img-area">
-                    <img src="./moon/asset/vote_yooneunseong.jpg" alt="Yoon Eun-seong from Queen of Tears">
+                    <img src="moon/asset/vote_yooneunseong.jpg" alt="Yoon Eun-seong from Queen of Tears">
                   </div>
                   <div class="info-area result-area">
                     <span class="drama-title">Queen of Tears</span>
@@ -1118,7 +1118,7 @@
                 <!-- Front of the card -->
                 <div class="vote-card-front">
                   <div class="img-area">
-                    <img src="./moon/asset/vote_jesan.jpg" alt="Jesan Daegun from Bon Appétit, Your Majesty">
+                    <img src="moon/asset/vote_jesan.jpg" alt="Jesan Daegun from Bon Appétit, Your Majesty">
                   </div>
                   <div class="info-area">
                     <span class="drama-title">Bon Appétit, Your Majesty</span>
@@ -1129,7 +1129,7 @@
                 <!-- Back of the card -->
                 <div class="vote-card-back">
                   <div class="img-area">
-                    <img src="./moon/asset/vote_jesan.jpg" alt="Jesan Daegun from Bon Appétit, Your Majesty">
+                    <img src="moon/asset/vote_jesan.jpg" alt="Jesan Daegun from Bon Appétit, Your Majesty">
                   </div>
                   <div class="info-area result-area">
                     <span class="drama-title">Bon Appétit, Your Majesty</span>
