--- a/viewersplayground_moon_backup.html
+++ b/viewersplayground_moon_backup.html
@@ -27,7 +27,7 @@
   <script src="./moon/js/pg.js"></script>
   <title>Viewer’s Playground Page</title>
 </head>
-
+<!-- 용량문제로 비디오 갤러리 동영상남기는 백업파일 -->
 <body>
   <div class="wrap">
     <!-- 헤더 시작 -->
@@ -370,6 +370,10 @@
             <div class="title">
               <h2>Creative Gallery</h2>
             </div>
+            <div class="category">
+              <button type="button" class="active">fan arts</button>
+              <button type="button">fan videos</button>
+            </div>
           </div>
           <!-- 1. 팬아트 카테고리 -->
           <div class="fanarts active"><!-- IM뱅크 작업파일 참고하기 -->
@@ -384,7 +388,7 @@
                           alt="A painting of Cha Hyun-soo stands solemnly ready to fight the monster.">
                         <div class="info-overlay">
                           <ul class="subtitle">
-                            <li><b>Sweet Home Fan Art</b></li>
+                            <li><b>1Sweet Home Fan Art</b></li>
                             <li>ArtLover</li>
                           </ul>
                           <div class="like">
@@ -464,7 +468,7 @@
                           alt="Genie, Song Hye-kyo fan art">
                         <div class="info-overlay">
                           <ul class="subtitle">
-                            <li><b>Song Hye-kyo fan art in Genie, Make a Wish</b></li>
+                            <li><b>"Bon Appédit, Your Majesty". Lee Chaemin's fan art</b></li>
                             <li>blue_jay</li>
                           </ul>
                           <div class="like">
@@ -610,6 +614,134 @@
               </div><!-- .con .img_new -->
             </div><!-- inner -->
           </div><!-- fanarts -->
+
+          <!-- 2. 비디오 카테고리 -->
+          <div class="fanvideos">
+            <div class="wrap inner">
+              <!-- 비디오 카테고리 > popular구역 -->
+              <div class="con video_popular">
+                <h4>🔥 ‍Popular</h4>
+                <div class="swiper popular_video_slide">
+                  <ul class="swiper-wrapper">
+                    <li class="swiper-slide">
+                      <div class="fan-video-wrap">
+                        <figure class="put_in_later mirror">
+                          <video src="./moon/asset/fan_video_pop_1.mp4" muted loop playsinline controlslist="nodownload"></video>
+                        </figure>
+                      </div>
+                    </li>
+                    <li class="swiper-slide">
+                      <div class="fan-video-wrap">
+                        <figure class="put_in_later mirror">
+                          <video src="./moon/asset/fan_video_pop_2.mp4" muted loop playsinline controlslist="nodownload"></video>
+                        </figure>
+                      </div>
+                    </li>
+                    <li class="swiper-slide">
+                      <div class="fan-video-wrap">
+                        <figure class="put_in_later mirror">
+                          <video src="./moon/asset/fan_video_pop_3.mp4" muted loop playsinline controlslist="nodownload"></video>
+                        </figure>
+                      </div>
+                    </li>
+                    <li class="swiper-slide">
+                      <div class="fan-video-wrap">
+                        <figure>
+                          <video src="./moon/asset/fan_video_pop_4.mp4" muted loop playsinline controlslist="nodownload"></video>
+                      </div>
+                    </li>
+                    <li class="swiper-slide">
+                      <div class="fan-video-wrap">
+                        <figure>
+                          <video src="./moon/asset/chef_ai_video.mp4" muted loop></video>
+                        </figure>
+                      </div>
+                    </li>
+                    <li class="swiper-slide">
+                      <div class="fan-video-wrap">
+                        <figure>
+                          <video src="moon/asset/chef_ai_video.mp4" muted loop></video>
+                        </figure>
+                      </div>
+                    </li>
+                    <li class="swiper-slide">
+                      <div class="fan-video-wrap">
+                        <figure>
+                          <video src="moon/asset/chef_ai_video.mp4" muted loop></video>
+                        </figure>
+                      </div>
+                    </li>
+                  </ul><!-- .swiper-wrapper -->
+                </div><!-- .swiper -->
+                <div class="swiper-pagination"></div>
+              </div><!-- .con .video_popular -->
+              <!-- 비디오 카테고리 > New구역 -->
+              <div class="con video_new">
+                <h4>✨ New</h4>
+                <div class="swiper new_video_slide">
+                  <ul class="swiper-wrapper">
+                    <li class="swiper-slide">
+                      <div class="fan-video-wrap">
+                        <figure>
+                          <video src="moon/asset/chef_ai_video.mp4" muted loop></video>
+                        </figure>
+                      </div>
+                    </li>
+                    <li class="swiper-slide">
+                      <div class="fan-video-wrap">
+                        <figure>
+                          <video src="moon/asset/chef_ai_video.mp4" muted loop></video>
+                        </figure>
+                      </div>
+                    </li>
+                    <li class="swiper-slide">
+                      <div class="fan-video-wrap">
+                        <figure>
+                          <video src="moon/asset/chef_ai_video.mp4" muted loop></video>
+                        </figure>
+                      </div>
+                    </li>
+                    <li class="swiper-slide">
+                      <div class="fan-video-wrap">
+                        <figure>
+                          <video src="moon/asset/chef_ai_video.mp4" muted loop></video>
+                        </figure>
+                      </div>
+                    </li>
+                    <li class="swiper-slide">
+                      <div class="fan-video-wrap">
+                        <figure>
+                          <video src="moon/asset/chef_ai_video.mp4" muted loop></video>
+                        </figure>
+                      </div>
+                    </li>
+                    <li class="swiper-slide slide6">
+                      <div class="fan-video-wrap">
+                        <figure>
+                          <video src="moon/asset/chef_ai_video.mp4" muted loop></video>
+                        </figure>
+                      </div>
+                    </li>
+                    <li class="swiper-slide slide7">
+                      <div class="fan-video-wrap">
+                        <figure>
+                          <video src="./moon/asset/chef_ai_video.mp4" muted loop></video>
+                        </figure>
+                      </div>
+                    </li>
+                    <li class="swiper-slide">
+                      <div class="fan-video-wrap">
+                        <figure>
+                          <video src="moon/asset/chef_ai_video.mp4" muted loop></video>
+                        </figure>
+                      </div>
+                    </li>
+                  </ul><!-- .swiper-wrapper -->
+                </div><!-- .swiper -->
+                <div class="swiper-pagination"></div>
+              </div><!-- .con .img_new -->
+            </div>
+          </div><!-- .fanvideos -->
         </div><!-- .inner -->
       </section>
 
@@ -636,7 +768,7 @@
                     <a href="#" class="comm-img-wrap">
                       <img src="./moon/asset/comm-t-img_5.jpg" alt="a scene of a drama">
                       <div class="info-overlay">
-                        <b class="num">1</b>
+                        <b class="num">5</b>
                         <div class="comm_article_info">
                           <em>Episode Discussions</em>
                           <span>
@@ -798,7 +930,7 @@
                     <a href="#" class="comm-img-wrap">
                       <img src="./moon/asset/comm-w-img_1.jpg" alt="">
                       <div class="info-overlay">
-                        <b class="num">2</b>
+                        <b class="num">1</b>
                         <div class="comm_article_info">
                           <em>Culture &amp; Locations</em>
                           <span>
@@ -813,7 +945,7 @@
                     <a href="#" class="comm-img-wrap">
                       <img src="./moon/asset/comm-w-img_2.jpg" alt="">
                       <div class="info-overlay">
-                        <b class="num">3</b>
+                        <b class="num">2</b>
                         <div class="comm_article_info">
                           <em>Episode Discussions</em>
                           <span>
@@ -828,7 +960,7 @@
                     <a href="#" class="comm-img-wrap">
                       <img src="./moon/asset/comm-w-img_3.jpg" alt="">
                       <div class="info-overlay">
-                        <b class="num">4</b>
+                        <b class="num">3</b>
                         <div class="comm_article_info">
                           <em>Episode Discussions</em>
                           <span>
@@ -843,7 +975,7 @@
                     <a href="#" class="comm-img-wrap">
                       <img src="./moon/asset/comm-w-img_4.jpg" alt="">
                       <div class="info-overlay">
-                        <b class="num">5</b>
+                        <b class="num">4</b>
                         <div class="comm_article_info">
                           <em>Q&amp;A · Knowledge Share</em>
                           <span>
