--- a/IR.html
+++ b/IR.html
@@ -290,7 +290,7 @@
         </article><!-- //.card -->
         <article class="card">
           <figure class="img_wrap">
-            <img src="IR_Kwon/img/Execution_Par.png" alt="Marketing" />
+            <img src="IR_Kwon/img/Execution_Mar.png" alt="Marketing" />
           </figure><!-- //.img_wrap -->
           <div class="content">
             <h3>Marketing</h3>
@@ -361,7 +361,7 @@
             <p>Studio Dragon's value lies<br />in a sustainable hit-making system.</p>
           </div><!-- //.content -->
         </article><!-- //.card -->
-        <article class="card">
+        <article class="card creator-pool">
           <figure class="img_wrap">
             <img src="./IR_Kwon/img/moat_repeatability_card.png" alt="Creator Pool" />
           </figure><!-- //.img_wrap -->
@@ -370,7 +370,7 @@
             <p>Top writers / PD / DP / VFX network.</p>
           </div><!-- //.content -->
         </article><!-- //.card -->
-        <article class="card">
+        <article class="card genre-portfolio">
           <figure class="img_wrap">
             <img src="./IR_Kwon/img/moat_repeatability_card2.png" alt="Genre Portfolio" />
           </figure><!-- //.img_wrap -->
@@ -381,7 +381,7 @@
         </article><!-- //.card -->
       </div><!-- //.row -->
       <div class="row">
-        <article class="card">
+        <article class="card format-spinoffs">
           <figure class="img_wrap">
             <img src="./IR_Kwon/img/moat_repeatability_card3.png" alt="Format & Spin-offs" />
           </figure><!-- //.img_wrap -->
@@ -390,9 +390,10 @@
             <p>Season, spin-off, remake expansions maximize IP LTV.</p>
           </div><!-- //.content -->
         </article><!-- //.card -->
-        <article class="card">
+        <article class="card data-driven">
           <figure class="img_wrap">
-            <img src="./IR_Kwon/img/moat_repeatability_card4.png" alt="Data-Driven Development" />
+            <img src="./IR_Kwon/img/moat_repeatability_card4.png" alt="Data-Driven Left" class="img-left" />
+            <img src="./IR_Kwon/img/moat_repeatability_card41.png" alt="Data-Driven Right" class="img-right" />
           </figure><!-- //.img_wrap -->
           <div class="content">
             <h3>Data-Driven Development</h3>
