이미지 갤러리 이미지 추가

--- a/viewersplayground_moon.html
+++ b/viewersplayground_moon.html
@@ -378,10 +378,9 @@
                 <h4>🔥 ‍Popular</h4>
                 <div class="swiper popular_img_slide">
                   <ul class="swiper-wrapper">
-                    <li class="swiper-slide slide1">
+                    <li class="swiper-slide">
                       <div class="fan-img-wrap">
-                        <img class="fan-img" src="./moon/asset/fanimg_1_po.png"
-                          alt="A painting of Cha Hyun-soo stands solemnly ready to fight the monster.">
+                        <img class="fan-img" src="./moon/asset/fanimg_1_po.png" alt="">
                         <div class="info-overlay">
                           <ul class="subtitle">
                             <li><b>Sweet Home Fan Art</b></li>
@@ -394,10 +393,9 @@
                         </div>
                       </div>
                     </li>
-                    <li class="swiper-slide slide2">
+                    <li class="swiper-slide">
                       <div class="fan-img-wrap">
-                        <img class="fan-img" src="./moon/asset/fanimg_2_po.jpg"
-                          alt="A painting of the male protagonist, a king, and the female protagonist, a chef, sitting facing each other around the dining table.">
+                        <img class="fan-img" src="./moon/asset/fanimg_2_po.jpg" alt="">
                         <div class="info-overlay">
                           <ul class="subtitle">
                             <li><b>Bon Appétit, Your Majesty Fan Art</b></li>
@@ -410,10 +408,9 @@
                         </div><!-- info-overlay -->
                       </div>
                     </li>
-                    <li class="swiper-slide slide3 selected">
+                    <li class="swiper-slide">
                       <div class="fan-img-wrap">
-                        <img class="fan-img" src="./moon/asset/fanimg_3_po.png"
-                          alt="A painting of a man and a woman sitting near a campfire.">
+                        <img class="fan-img" src="./moon/asset/fanimg_3_po.png" alt="">
                         <div class="info-overlay">
                           <ul class="subtitle">
                             <li><b>Crash Landing on You</b></li>
@@ -426,10 +423,9 @@
                         </div><!-- info-overlay -->
                       </div>
                     </li>
-                    <li class="swiper-slide slide4">
+                    <li class="swiper-slide">
                       <div class="fan-img-wrap">
-                        <img class="fan-img" src="./moon/asset/fanimg_4_po.png"
-                          alt="A painting of a man and a woman sitting near a campfire.">
+                        <img class="fan-img" src="./moon/asset/fanimg_4_po.png" alt="">
                         <div class="info-overlay">
                           <ul class="subtitle">
                             <li><b>Fan art of a scene from Gyeongseong Creature</b></li>
@@ -442,10 +438,9 @@
                         </div><!-- info-overlay -->
                       </div>
                     </li>
-                    <li class="swiper-slide slide5">
+                    <li class="swiper-slide">
                       <div class="fan-img-wrap">
-                        <img class="fan-img" src="./moon/asset/fanimg_5_po.png"
-                          alt="Hotel Del Luna, IU fan art">
+                        <img class="fan-img" src="./moon/asset/fanimg_5_po.png" alt="">
                         <div class="info-overlay">
                           <ul class="subtitle">
                             <li><b>Hotel Del Luna, IU fan art</b></li>
@@ -458,10 +453,9 @@
                         </div><!-- info-overlay -->
                       </div>
                     </li>
-                    <li class="swiper-slide slide6">
+                    <li class="swiper-slide">
                       <div class="fan-img-wrap">
-                        <img class="fan-img" src="./moon/asset/fanimg_6_po.jpg"
-                          alt="Genie, Song Hye-kyo fan art">
+                        <img class="fan-img" src="./moon/asset/fanimg_6_po.jpg" alt="">
                         <div class="info-overlay">
                           <ul class="subtitle">
                             <li><b>Song Hye-kyo fan art in Genie, Make a Wish</b></li>
@@ -474,10 +468,9 @@
                         </div><!-- info-overlay -->
                       </div>
                     </li>
-                    <li class="swiper-slide slide7">
+                    <li class="swiper-slide">
                       <div class="fan-img-wrap">
-                        <img class="fan-img" src="./moon/asset/fanimg_7_po.png"
-                          alt="Bon Appédit, Your Majesty. Lee Chaemin fan art">
+                        <img class="fan-img" src="./moon/asset/fanimg_7_po.png" alt="">
                         <div class="info-overlay">
                           <ul class="subtitle">
                             <li><b>Bon Appédit, Your Majesty. Lee Chaemin fan art</b></li>
@@ -498,7 +491,7 @@
                 <h4>✨ New</h4>
                 <div class="swiper new_img_slide">
                   <ul class="swiper-wrapper">
-                    <li class="swiper-slide slide1">
+                    <li class="swiper-slide">
                       <div class="fan-img-wrap">
                         <img class="fan-img" src="./moon/asset/fanimg_1_new.jpg"
                           alt="The Glory, Song Hye-kyo fan art">
@@ -514,9 +507,9 @@
                         </div><!-- info-overay -->
                       </div>
                     </li>
-                    <li class="swiper-slide slide2">
+                    <li class="swiper-slide">
                       <div class="fan-img-wrap">
-                        <div class="fan-img mirror"></div>
+                        <img class="fan-img" src="./moon/asset/fanimg_2_new.png" alt="">
                         <div class="info-overlay">
                           <ul class="subtitle">
                             <li><b>2Sweet Home Fan Art</b></li>
@@ -529,9 +522,9 @@
                         </div><!-- info-overlay -->
                       </div>
                     </li>
-                    <li class="swiper-slide slide3">
+                    <li class="swiper-slide">
                       <div class="fan-img-wrap">
-                        <div class="fan-img mirror"></div>
+                        <img class="fan-img" src="./moon/asset/fanimg_3_new.jpeg" alt="">
                         <div class="info-overlay">
                           <ul class="subtitle">
                             <li><b>3Sweet Home Fan Art</b></li>
@@ -544,9 +537,9 @@
                         </div><!-- info-overlay -->
                       </div>
                     </li>
-                    <li class="swiper-slide slide4">
+                    <li class="swiper-slide">
                       <div class="fan-img-wrap">
-                        <div class="fan-img mirror"></div>
+                        <img class="fan-img" src="./moon/asset/fanimg_4_new.png" alt="">
                         <div class="info-overlay">
                           <ul class="subtitle">
                             <li><b>4Sweet Home Fan Art</b></li>
@@ -559,9 +552,9 @@
                         </div><!-- info-overlay -->
                       </div>
                     </li>
-                    <li class="swiper-slide slide5">
+                    <li class="swiper-slide">
                       <div class="fan-img-wrap">
-                        <div class="fan-img mirror"></div>
+                        <img class="fan-img" src="./moon/asset/fanimg_5_new.png" alt="">
                         <div class="info-overlay">
                           <ul class="subtitle">
                             <li><b>5Sweet Home Fan Art</b></li>
@@ -574,9 +567,9 @@
                         </div><!-- info-overlay -->
                       </div>
                     </li>
-                    <li class="swiper-slide slide6">
+                    <li class="swiper-slide">
                       <div class="fan-img-wrap">
-                        <div class="fan-img mirror"></div>
+                        <img class="fan-img" src="./moon/asset/fanimg_6_new.png" alt="">
                         <div class="info-overlay">
                           <ul class="subtitle">
                             <li><b>6Sweet Home Fan Art</b></li>
@@ -589,9 +582,9 @@
                         </div><!-- info-overlay -->
                       </div>
                     </li>
-                    <li class="swiper-slide slide7">
+                    <li class="swiper-slide">
                       <div class="fan-img-wrap">
-                        <div class="fan-img mirror"></div>
+                        <img class="fan-img" src="./moon/asset/fanimg_7_new.png" alt="">
                         <div class="info-overlay">
                           <ul class="subtitle">
                             <li><b>7Sweet Home Fan Art</b></li>
